tests/snapshots/fixtures/anyhow__1500.snap
---
source: tests/snapshots.rs
expression: rendered
---
.github/
    FUNDING.yml
    workflows/
        ci.yml
.gitignore
Cargo.toml
    1→[package]
    2→name = "anyhow"
    3→version = "1.0.101"
    4→authors = ["David Tolnay <dtolnay@gmail.com>"]
    5→categories = ["rust-patterns", "no-std"]
    6→description = "Flexible concrete Error type built on std::error::Error"
    7→documentation = "https://docs.rs/anyhow"
    8→edition = "2021"
    9→keywords = ["error", "error-handling"]
    10→license = "MIT OR Apache-2.0"
    11→repository = "https://github.com/dtolnay/anyhow"
    12→rust-version = "1.68"
    14→[features]
    15→default = ["std"]
    16→std = []
LICENSE-APACHE
LICENSE-MIT
README.md
build.rs
rust-toolchain.toml
src/
    backtrace.rs
        8→pub(crate) enum Backtrace {}
        …
    chain.rs
        11→pub(crate) struct Chain<'a> {
        12→    state: ChainState<'a>,
        13→}
        16→pub(crate) enum ChainState<'a> {
        17→    Linked {
        18→        next: Option<&'a (dyn StdError + 'static)>,
        19→    },
        20→    #[cfg(any(feature = "std", not(anyhow_no_core_error)))]
        21→    Buffered {
        22→        rest: vec::IntoIter<&'a (dyn StdError + 'static)>,
        23→    },
        24→}
    context.rs
    ensure.rs
        10→pub trait BothDebug {
        11→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
        12→}
        25→pub trait NotBothDebug {
        26→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
        27→}
        105→macro_rules! __parse_ensure {
        …
        886→macro_rules! __fancy_ensure {
        …
        912→macro_rules! __fallback_ensure {
        …
    error.rs
        934→pub(crate) struct ErrorImpl<E = ()> {
        935→    vtable: &'static ErrorVTable,
        936→    backtrace: Option<Backtrace>,
        937→    // NOTE: Don't use directly. Use only through vtable. Erased type may have
        938→    // different alignment.
        939→    _object: E,
        940→}
        952→pub(crate) struct ContextError<C, E> {
        953→    pub context: C,
        954→    pub error: E,
        955→}
    fmt.rs
    kind.rs
    lib.rs
        390→pub struct Error {
        391→    inner: Own<ErrorImpl>,
        392→}
        415→pub struct Chain<'a> {
        416→    state: crate::chain::ChainState<'a>,
        417→}
        468→pub type Result<T, E = Error> = core::result::Result<T, E>;
        …
        616→pub trait Context<T, E>: context::private::Sealed {
        617→    /// Wrap the error value with additional context.
        618→    fn context<C>(self, context: C) -> Result<T, Error>
        619→    where
        620→        C: Display + Send + Sync + 'static;
        622→    /// Wrap the error value with additional context that is evaluated lazily
        623→    /// only once an error does occur.
        624→    fn with_context<C, F>(self, f: F) -> Result<T, Error>
        625→    where
        626→        C: Display + Send + Sync + 'static,
        627→        F: FnOnce() -> C;
        628→}
        650→pub fn Ok<T>(value: T) -> Result<T> {
        …
    macros.rs
        58→macro_rules! bail {
        59→    ($msg:literal $(,)?) => {
        60→        return $crate::__private::Err($crate::__anyhow!($msg))
        61→    };
        62→    ($err:expr $(,)?) => {
        63→        return $crate::__private::Err($crate::__anyhow!($err))
        64→    };
        65→    ($fmt:expr, $($arg:tt)*) => {
        66→        return $crate::__private::Err($crate::__anyhow!($fmt, $($arg)*))
        67→    };
        68→}
        204→macro_rules! anyhow {
        205→    ($msg:literal $(,)?) => {
        206→        $crate::__private::must_use({
        207→            let error = $crate::__private::format_err($crate::__private::format_args!($msg));
        208→            error
        209→        })
        210→    };
        211→    ($err:expr $(,)?) => {
        212→        $crate::__private::must_use({
        213→            use $crate::__private::kind::*;
        214→            let error = match $err {
        215→                error => (&error).anyhow_kind().new(error),
        216→            };
        217→            error
        218→        })
        219→    };
        220→    ($fmt:expr, $($arg:tt)*) => {
        221→        $crate::Error::msg($crate::__private::format!($fmt, $($arg)*))
        222→    };
        223→}
        230→macro_rules! __anyhow {
        …
    nightly.rs
    ptr.rs
        6→pub struct Own<T>
        7→where
        8→    T: ?Sized,
        9→{
        10→    pub ptr: NonNull<T>,
        11→}
        64→pub struct Ref<'a, T>
        65→where
        66→    T: ?Sized,
        67→{
        68→    pub ptr: NonNull<T>,
        69→    lifetime: PhantomData<&'a T>,
        70→}
        125→pub struct Mut<'a, T>
        …
        181→pub trait CastTo {
        182→    type Target;
        183→}
    wrapper.rs
tests/
