tests/snapshots/fixtures/anyhow__3000.snap
---
source: tests/snapshots.rs
expression: rendered
---
.github/
    FUNDING.yml
    workflows/
        ci.yml
.gitignore
Cargo.toml
    1→[package]
    2→name = "anyhow"
    3→version = "1.0.101"
    4→authors = ["David Tolnay <dtolnay@gmail.com>"]
    5→categories = ["rust-patterns", "no-std"]
    6→description = "Flexible concrete Error type built on std::error::Error"
    7→documentation = "https://docs.rs/anyhow"
    8→edition = "2021"
    9→keywords = ["error", "error-handling"]
    10→license = "MIT OR Apache-2.0"
    11→repository = "https://github.com/dtolnay/anyhow"
    12→rust-version = "1.68"
    14→[features]
    15→default = ["std"]
    16→std = []
LICENSE-APACHE
LICENSE-MIT
README.md
    1→Anyhow&ensp;¯\\\_(°ペ)\_/¯
    2→==========================
    4→[<img alt="github" src="https://img.shields.io/badge/github-dtolnay/anyhow-8da0cb?style=for-the-badge&labelColor=555555&logo=github" height="20">](https://github.com/dtolnay/anyhow)
    5→[<img alt="crates.io" src="https://img.shields.io/crates/v/anyhow.svg?style=for-the-badge&color=fc8d62&logo=rust" height="20">](https://crates.io/crates/anyhow)
    6→[<img alt="docs.rs" src="https://img.shields.io/badge/docs.rs-anyhow-66c2a5?style=for-the-badge&labelColor=555555&logo=docs.rs" height="20">](https://docs.rs/anyhow)
    7→[<img alt="build status" src="https://img.shields.io/github/actions/workflow/status/dtolnay/anyhow/ci.yml?branch=master&style=for-the-badge" height="20">](https://github.com/dtolnay/anyhow/actions?query=branch%3Amaster)
build.rs
rust-toolchain.toml
src/
    backtrace.rs
        8→pub(crate) enum Backtrace {}
    chain.rs
        11→pub(crate) struct Chain<'a> {
        12→    state: ChainState<'a>,
        13→}
        16→pub(crate) enum ChainState<'a> {
        17→    Linked {
        18→        next: Option<&'a (dyn StdError + 'static)>,
        19→    },
        20→    #[cfg(any(feature = "std", not(anyhow_no_core_error)))]
        21→    Buffered {
        22→        rest: vec::IntoIter<&'a (dyn StdError + 'static)>,
        23→    },
        24→}
    context.rs
    ensure.rs
        10→pub trait BothDebug {
        11→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
        12→}
        25→pub trait NotBothDebug {
        26→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
        27→}
        105→macro_rules! __parse_ensure {
        …
        886→macro_rules! __fancy_ensure {
        …
        912→macro_rules! __fallback_ensure {
        …
    error.rs
        934→pub(crate) struct ErrorImpl<E = ()> {
        935→    vtable: &'static ErrorVTable,
        936→    backtrace: Option<Backtrace>,
        937→    // NOTE: Don't use directly. Use only through vtable. Erased type may have
        938→    // different alignment.
        939→    _object: E,
        940→}
        952→pub(crate) struct ContextError<C, E> {
        953→    pub context: C,
        954→    pub error: E,
        955→}
    fmt.rs
    kind.rs
        55→pub struct Adhoc;
        58→pub trait AdhocKind: Sized {
        59→    #[inline]
        60→    fn anyhow_kind(&self) -> Adhoc {
        61→        Adhoc
        62→    }
        63→}
        77→pub struct Trait;
        80→pub trait TraitKind: Sized {
        81→    #[inline]
        82→    fn anyhow_kind(&self) -> Trait {
        83→        Trait
        84→    }
        85→}
        100→pub struct Boxed;
        104→pub trait BoxedKind: Sized {
        105→    #[inline]
        106→    fn anyhow_kind(&self) -> Boxed {
        107→        Boxed
        108→    }
        109→}
    lib.rs
        252→mod backtrace;
        253→mod chain;
        254→mod context;
        255→mod ensure;
        256→mod error;
        257→mod fmt;
        258→mod kind;
        259→mod macros;
        261→mod nightly;
        262→mod ptr;
        263→mod wrapper;
        265→use crate::error::ErrorImpl;
        266→use crate::ptr::Own;
        267→use core::fmt::Display;
        270→use core::fmt::Debug;
        273→use std::error::Error as StdError;
        276→use core::error::Error as StdError;
        286→pub use anyhow as format_err;
        390→pub struct Error {
        391→    inner: Own<ErrorImpl>,
        392→}
        415→pub struct Chain<'a> {
        416→    state: crate::chain::ChainState<'a>,
        417→}
        468→pub type Result<T, E = Error> = core::result::Result<T, E>;
        616→pub trait Context<T, E>: context::private::Sealed {
        617→    /// Wrap the error value with additional context.
        618→    fn context<C>(self, context: C) -> Result<T, Error>
        619→    where
        620→        C: Display + Send + Sync + 'static;
        622→    /// Wrap the error value with additional context that is evaluated lazily
        623→    /// only once an error does occur.
        624→    fn with_context<C, F>(self, f: F) -> Result<T, Error>
        625→    where
        626→        C: Display + Send + Sync + 'static,
        627→        F: FnOnce() -> C;
        628→}
        650→pub fn Ok<T>(value: T) -> Result<T> {
        …
        656→pub mod __private {
        …
    macros.rs
        58→macro_rules! bail {
        59→    ($msg:literal $(,)?) => {
        60→        return $crate::__private::Err($crate::__anyhow!($msg))
        61→    };
        62→    ($err:expr $(,)?) => {
        63→        return $crate::__private::Err($crate::__anyhow!($err))
        64→    };
        65→    ($fmt:expr, $($arg:tt)*) => {
        66→        return $crate::__private::Err($crate::__anyhow!($fmt, $($arg)*))
        67→    };
        68→}
        204→macro_rules! anyhow {
        205→    ($msg:literal $(,)?) => {
        206→        $crate::__private::must_use({
        207→            let error = $crate::__private::format_err($crate::__private::format_args!($msg));
        208→            error
        209→        })
        210→    };
        211→    ($err:expr $(,)?) => {
        212→        $crate::__private::must_use({
        213→            use $crate::__private::kind::*;
        214→            let error = match $err {
        215→                error => (&error).anyhow_kind().new(error),
        216→            };
        217→            error
        218→        })
        219→    };
        220→    ($fmt:expr, $($arg:tt)*) => {
        221→        $crate::Error::msg($crate::__private::format!($fmt, $($arg)*))
        222→    };
        223→}
        230→macro_rules! __anyhow {
        …
    nightly.rs
        41→pub fn request_ref_backtrace(err: &dyn Error) -> Option<&Backtrace> {
        …
        52→pub fn provide_ref_backtrace<'a>(request: &mut Request<'a>, backtrace: &'a Backtrace) {
        …
        56→pub fn provide<'a>(err: &'a (impl Error + ?Sized), request: &mut Request<'a>) {
        …
    ptr.rs
        6→pub struct Own<T>
        7→where
        8→    T: ?Sized,
        9→{
        10→    pub ptr: NonNull<T>,
        11→}
        64→pub struct Ref<'a, T>
        65→where
        66→    T: ?Sized,
        67→{
        68→    pub ptr: NonNull<T>,
        69→    lifetime: PhantomData<&'a T>,
        70→}
        125→pub struct Mut<'a, T>
        126→where
        127→    T: ?Sized,
        128→{
        129→    pub ptr: NonNull<T>,
        130→    lifetime: PhantomData<&'a mut T>,
        131→}
        181→pub trait CastTo {
        182→    type Target;
        183→}
    wrapper.rs
        11→pub struct MessageError<M>(pub M);
        34→pub struct DisplayError<M>(pub M);
        58→pub struct BoxedError(pub Box<dyn StdError + Send + Sync>);
tests/
    common/
        mod.rs
            1→use anyhow::{bail, Result};
            2→use std::io;
            4→pub fn bail_literal() -> Result<()> {
            …
            8→pub fn bail_fmt() -> Result<()> {
            …
            12→pub fn bail_error() -> Result<()> {
            …
    compiletest.rs
    crate/
        .gitignore
        Cargo.toml
            1→[package]
            2→name = "anyhow_test"
            3→version = "0.0.0"
            4→authors = ["David Tolnay <dtolnay@gmail.com>"]
            5→edition = "2021"
            6→publish = false
            14→[features]
            15→default = ["std"]
            16→std = ["anyhow/std"]
            17→backtrace = ["anyhow/backtrace"]
        test.rs
    drop/
        mod.rs
            3→use std::error::Error as StdError;
            4→use std::fmt::{self, Display};
            5→use std::sync::atomic::{AtomicBool, Ordering};
            6→use std::sync::Arc;
            9→pub struct Flag {
            10→    atomic: Arc<AtomicBool>,
            11→}
            13→impl Flag {
            14→    pub fn new() -> Self {
            …
            20→    pub fn get(&self) -> bool {
            …
            26→pub struct DetectDrop {
            27→    has_dropped: Flag,
            28→}
            30→impl DetectDrop {
            31→    pub fn new(has_dropped: &Flag) -> Self {
            …
            40→impl StdError for DetectDrop {}
            42→impl Display for DetectDrop {
            43→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
            …
            48→impl Drop for DetectDrop {
            49→    fn drop(&mut self) {
            …
    test_autotrait.rs
    test_backtrace.rs
    test_boxed.rs
    test_chain.rs
    test_context.rs
    test_convert.rs
    test_downcast.rs
    test_ensure.rs
    test_ffi.rs
        7→pub extern "C" fn anyhow1(err: anyhow::Error) {
        …
        12→pub extern "C" fn anyhow2(err: &mut Option<anyhow::Error>) {
        …
        17→pub extern "C" fn anyhow3() -> Option<anyhow::Error> {
        …
    test_fmt.rs
    test_macros.rs
    test_repr.rs
    test_source.rs
    ui/
        chained-comparison.rs
        chained-comparison.stderr
        empty-ensure.rs
        empty-ensure.stderr
        ensure-nonbool.rs
        ensure-nonbool.stderr
        must-use.rs
        must-use.stderr
        no-impl.rs
        no-impl.stderr
        temporary-value.rs
        temporary-value.stderr
        wrong-interpolation.rs
        wrong-interpolation.stderr
