tests/snapshots/fixtures/anyhow__6000.snap
---
source: tests/snapshots.rs
expression: rendered
---
.github/
    FUNDING.yml
    workflows/
        ci.yml
.gitignore
Cargo.toml
    1→[package]
    2→name = "anyhow"
    3→version = "1.0.101"
    4→authors = ["David Tolnay <dtolnay@gmail.com>"]
    5→categories = ["rust-patterns", "no-std"]
    6→description = "Flexible concrete Error type built on std::error::Error"
    7→documentation = "https://docs.rs/anyhow"
    8→edition = "2021"
    9→keywords = ["error", "error-handling"]
    10→license = "MIT OR Apache-2.0"
    11→repository = "https://github.com/dtolnay/anyhow"
    12→rust-version = "1.68"
    14→[features]
    15→default = ["std"]
    16→std = []
    18→[dependencies]
    19→# On compilers older than 1.65, features=["backtrace"] may be used to enable
    20→# backtraces via the `backtrace` crate. This feature has no effect on 1.65+
    21→# besides bringing in an unused dependency, as `std::backtrace` is always
    22→# preferred.
    23→backtrace = { version = "0.3.51", optional = true }
    25→[dev-dependencies]
    26→futures = { version = "0.3", default-features = false }
    27→rustversion = "1.0.6"
    28→syn = { version = "2.0", features = ["full"] }
    29→thiserror = "2"
    30→trybuild = { version = "1.0.108", features = ["diff"] }
LICENSE-APACHE
LICENSE-MIT
README.md
    1→Anyhow&ensp;¯\\\_(°ペ)\_/¯
    2→==========================
    4→[<img alt="github" src="https://img.shields.io/badge/github-dtolnay/anyhow-8da0cb?style=for-the-badge&labelColor=555555&logo=github" height="20">](https://github.com/dtolnay/anyhow)
    5→[<img alt="crates.io" src="https://img.shields.io/crates/v/anyhow.svg?style=for-the-badge&color=fc8d62&logo=rust" height="20">](https://crates.io/crates/anyhow)
    6→[<img alt="docs.rs" src="https://img.shields.io/badge/docs.rs-anyhow-66c2a5?style=for-the-badge&labelColor=555555&logo=docs.rs" height="20">](https://docs.rs/anyhow)
    7→[<img alt="build status" src="https://img.shields.io/github/actions/workflow/status/dtolnay/anyhow/ci.yml?branch=master&style=for-the-badge" height="20">](https://github.com/dtolnay/anyhow/actions?query=branch%3Amaster)
    9→This library provides [`anyhow::Error`][Error], a trait object based error type
    10→for easy idiomatic error handling in Rust applications.
    12→[Error]: https://docs.rs/anyhow/1.0/anyhow/struct.Error.html
    14→```toml
    15→[dependencies]
    16→anyhow = "1.0"
    17→```
    19→<br>
    126→## No-std support
    128→In no_std mode, almost all of the same API is available and works the same way.
    129→To depend on Anyhow in no_std mode, disable our default enabled "std" feature in
    130→Cargo.toml. A global allocator is required.
    132→```toml
    133→[dependencies]
    134→anyhow = { version = "1.0", default-features = false }
    135→```
    137→With versions of Rust older than 1.81, no_std mode may require an additional
    138→`.map_err(Error::msg)` when working with a non-Anyhow error type inside a
    139→function that returns Anyhow's error type, as the trait that `?`-based error
    140→conversions are defined by is only available in std in those old versions.
    142→<br>
    144→## Comparison to failure
    146→The `anyhow::Error` type works something like `failure::Error`, but unlike
    147→failure ours is built around the standard library's `std::error::Error` trait
    148→rather than a separate trait `failure::Fail`. The standard library has adopted
    149→the necessary improvements for this to be possible as part of [RFC 2504].
    151→[RFC 2504]: https://github.com/rust-lang/rfcs/blob/master/text/2504-fix-error.md
    153→<br>
    155→## Comparison to thiserror
    157→Use Anyhow if you don't care what error type your functions return, you just
    158→want it to be easy. This is common in application code. Use [thiserror] if you
    159→are a library that wants to design your own dedicated error type(s) so that on
    160→failures the caller gets exactly the information that you choose.
    162→[thiserror]: https://github.com/dtolnay/thiserror
    164→<br>
    166→#### License
    168→<sup>
    169→Licensed under either of <a href="LICENSE-APACHE">Apache License, Version
    170→2.0</a> or <a href="LICENSE-MIT">MIT license</a> at your option.
    171→</sup>
    173→<br>
    175→<sub>
    176→Unless you explicitly state otherwise, any contribution intentionally submitted
    177→for inclusion in this crate by you, as defined in the Apache-2.0 license, shall
    178→be dual licensed as above, without any additional terms or conditions.
    179→</sub>
build.rs
rust-toolchain.toml
src/
    backtrace.rs
        8→pub(crate) enum Backtrace {}
        …
    chain.rs
        11→pub(crate) struct Chain<'a> {
        12→    state: ChainState<'a>,
        13→}
        16→pub(crate) enum ChainState<'a> {
        17→    Linked {
        18→        next: Option<&'a (dyn StdError + 'static)>,
        19→    },
        20→    #[cfg(any(feature = "std", not(anyhow_no_core_error)))]
        21→    Buffered {
        22→        rest: vec::IntoIter<&'a (dyn StdError + 'static)>,
        23→    },
        24→}
    context.rs
    ensure.rs
        10→pub trait BothDebug {
        11→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
        12→}
        25→pub trait NotBothDebug {
        26→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
        27→}
        105→macro_rules! __parse_ensure {
        …
        886→macro_rules! __fancy_ensure {
        …
        912→macro_rules! __fallback_ensure {
        …
    error.rs
        934→pub(crate) struct ErrorImpl<E = ()> {
        935→    vtable: &'static ErrorVTable,
        936→    backtrace: Option<Backtrace>,
        937→    // NOTE: Don't use directly. Use only through vtable. Erased type may have
        938→    // different alignment.
        939→    _object: E,
        940→}
        952→pub(crate) struct ContextError<C, E> {
        953→    pub context: C,
        954→    pub error: E,
        955→}
    fmt.rs
    kind.rs
        55→pub struct Adhoc;
        …
        58→pub trait AdhocKind: Sized {
        59→    #[inline]
        60→    fn anyhow_kind(&self) -> Adhoc {
        61→        Adhoc
        62→    }
        63→}
        77→pub struct Trait;
        …
        80→pub trait TraitKind: Sized {
        81→    #[inline]
        82→    fn anyhow_kind(&self) -> Trait {
        83→        Trait
        84→    }
        85→}
        100→pub struct Boxed;
        …
        104→pub trait BoxedKind: Sized {
        105→    #[inline]
        106→    fn anyhow_kind(&self) -> Boxed {
        107→        Boxed
        108→    }
        109→}
    lib.rs
        1→//! [![github]](https://github.com/dtolnay/anyhow)&ensp;[![crates-io]](https://crates.io/crates/anyhow)&ensp;[![docs-rs]](https://docs.rs/anyhow)
        2→//!
        3→//! [github]: https://img.shields.io/badge/github-8da0cb?style=for-the-badge&labelColor=555555&logo=github
        4→//! [crates-io]: https://img.shields.io/badge/crates.io-fc8d62?style=for-the-badge&labelColor=555555&logo=rust
        5→//! [docs-rs]: https://img.shields.io/badge/docs.rs-66c2a5?style=for-the-badge&labelColor=555555&logo=docs.rs
        6→//!
        7→//! <br>
        8→//!
        9→//! This library provides [`anyhow::Error`][Error], a trait object based error
        10→//! type for easy idiomatic error handling in Rust applications.
        11→//!
        12→//! <br>
        13→//!
        252→mod backtrace;
        253→mod chain;
        254→mod context;
        255→mod ensure;
        256→mod error;
        257→mod fmt;
        258→mod kind;
        259→mod macros;
        261→mod nightly;
        262→mod ptr;
        263→mod wrapper;
        265→use crate::error::ErrorImpl;
        266→use crate::ptr::Own;
        267→use core::fmt::Display;
        270→use core::fmt::Debug;
        273→use std::error::Error as StdError;
        276→use core::error::Error as StdError;
        286→pub use anyhow as format_err;
        390→pub struct Error {
        391→    inner: Own<ErrorImpl>,
        392→}
        394→/// Iterator of a chain of source errors.
        395→///
        396→/// This type is the iterator returned by [`Error::chain`].
        397→///
        398→/// # Example
        399→///
        400→/// ```
        401→/// use anyhow::Error;
        402→/// use std::io;
        403→///
        404→/// pub fn underlying_io_error_kind(error: &Error) -> Option<io::ErrorKind> {
        405→///     for cause in error.chain() {
        406→///         if let Some(io_error) = cause.downcast_ref::<io::Error>() {
        407→///             return Some(io_error.kind());
        408→///         }
        409→///     }
        410→///     None
        411→/// }
        412→/// ```
        415→pub struct Chain<'a> {
        416→    state: crate::chain::ChainState<'a>,
        417→}
        419→/// `Result<T, Error>`
        420→///
        421→/// This is a reasonable return type to use throughout your application but also
        422→/// for `fn main`; if you do, failures will be printed along with any
        423→/// [context][Context] and a backtrace if one was captured.
        424→///
        425→/// `anyhow::Result` may be used with one *or* two type parameters.
        426→///
        427→/// ```rust
        428→/// use anyhow::Result;
        429→///
        430→/// # const IGNORE: &str = stringify! {
        431→/// fn demo1() -> Result<T> {...}
        432→///            // ^ equivalent to std::result::Result<T, anyhow::Error>
        433→///
        434→/// fn demo2() -> Result<T, OtherError> {...}
        435→///            // ^ equivalent to std::result::Result<T, OtherError>
        436→/// # };
        437→/// ```
        438→///
        439→/// # Example
        440→///
        441→/// ```
        442→/// # pub trait Deserialize {}
        443→/// #
        444→/// # mod serde_json {
        445→/// #     use super::Deserialize;
        446→/// #     use std::io;
        447→/// #
        448→/// #     pub fn from_str<T: Deserialize>(json: &str) -> io::Result<T> {
        449→/// #         unimplemented!()
        450→/// #     }
        451→/// # }
        452→/// #
        453→/// # #[derive(Debug)]
        454→/// # struct ClusterMap;
        455→/// #
        456→/// # impl Deserialize for ClusterMap {}
        457→/// #
        458→/// use anyhow::Result;
        459→///
        460→/// fn main() -> Result<()> {
        461→///     # return Ok(());
        462→///     let config = std::fs::read_to_string("cluster.json")?;
        463→///     let map: ClusterMap = serde_json::from_str(&config)?;
        464→///     println!("cluster info: {:#?}", map);
        465→///     Ok(())
        466→/// }
        467→/// ```
        468→pub type Result<T, E = Error> = core::result::Result<T, E>;
        …
        616→pub trait Context<T, E>: context::private::Sealed {
        617→    /// Wrap the error value with additional context.
        618→    fn context<C>(self, context: C) -> Result<T, Error>
        619→    where
        620→        C: Display + Send + Sync + 'static;
        622→    /// Wrap the error value with additional context that is evaluated lazily
        623→    /// only once an error does occur.
        624→    fn with_context<C, F>(self, f: F) -> Result<T, Error>
        625→    where
        626→        C: Display + Send + Sync + 'static,
        627→        F: FnOnce() -> C;
        628→}
        630→/// Equivalent to `Ok::<_, anyhow::Error>(value)`.
        631→///
        632→/// This simplifies creation of an `anyhow::Result` in places where type
        633→/// inference cannot deduce the `E` type of the result &mdash; without needing
        634→/// to write `Ok::<_, anyhow::Error>(value)`.
        635→///
        636→/// One might think that `anyhow::Result::Ok(value)` would work in such cases
        637→/// but it does not.
        638→///
        639→/// ```console
        640→/// error[E0282]: type annotations needed for `std::result::Result<i32, E>`
        641→///   --> src/main.rs:11:13
        642→///    |
        643→/// 11 |     let _ = anyhow::Result::Ok(1);
        644→///    |         -   ^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `E` declared on the enum `Result`
        645→///    |         |
        646→///    |         consider giving this pattern the explicit type `std::result::Result<i32, E>`, where the type parameter `E` is specified
        647→/// ```
        650→pub fn Ok<T>(value: T) -> Result<T> {
        …
        656→pub mod __private {
        …
    macros.rs
        58→macro_rules! bail {
        59→    ($msg:literal $(,)?) => {
        60→        return $crate::__private::Err($crate::__anyhow!($msg))
        61→    };
        62→    ($err:expr $(,)?) => {
        63→        return $crate::__private::Err($crate::__anyhow!($err))
        64→    };
        65→    ($fmt:expr, $($arg:tt)*) => {
        66→        return $crate::__private::Err($crate::__anyhow!($fmt, $($arg)*))
        67→    };
        68→}
        204→macro_rules! anyhow {
        205→    ($msg:literal $(,)?) => {
        206→        $crate::__private::must_use({
        207→            let error = $crate::__private::format_err($crate::__private::format_args!($msg));
        208→            error
        209→        })
        210→    };
        211→    ($err:expr $(,)?) => {
        212→        $crate::__private::must_use({
        213→            use $crate::__private::kind::*;
        214→            let error = match $err {
        215→                error => (&error).anyhow_kind().new(error),
        216→            };
        217→            error
        218→        })
        219→    };
        220→    ($fmt:expr, $($arg:tt)*) => {
        221→        $crate::Error::msg($crate::__private::format!($fmt, $($arg)*))
        222→    };
        223→}
        230→macro_rules! __anyhow {
        …
    nightly.rs
        41→pub fn request_ref_backtrace(err: &dyn Error) -> Option<&Backtrace> {
        …
        52→pub fn provide_ref_backtrace<'a>(request: &mut Request<'a>, backtrace: &'a Backtrace) {
        …
        56→pub fn provide<'a>(err: &'a (impl Error + ?Sized), request: &mut Request<'a>) {
        …
    ptr.rs
        6→pub struct Own<T>
        7→where
        8→    T: ?Sized,
        9→{
        10→    pub ptr: NonNull<T>,
        11→}
        64→pub struct Ref<'a, T>
        65→where
        66→    T: ?Sized,
        67→{
        68→    pub ptr: NonNull<T>,
        69→    lifetime: PhantomData<&'a T>,
        70→}
        125→pub struct Mut<'a, T>
        126→where
        127→    T: ?Sized,
        128→{
        129→    pub ptr: NonNull<T>,
        130→    lifetime: PhantomData<&'a mut T>,
        131→}
        181→pub trait CastTo {
        182→    type Target;
        183→}
    wrapper.rs
        11→pub struct MessageError<M>(pub M);
        …
        34→pub struct DisplayError<M>(pub M);
        …
        58→pub struct BoxedError(pub Box<dyn StdError + Send + Sync>);
        …
tests/
    common/
        mod.rs
            1→use anyhow::{bail, Result};
            2→use std::io;
            4→pub fn bail_literal() -> Result<()> {
            …
            8→pub fn bail_fmt() -> Result<()> {
            …
            12→pub fn bail_error() -> Result<()> {
            …
    compiletest.rs
    crate/
        .gitignore
        Cargo.toml
            1→[package]
            2→name = "anyhow_test"
            3→version = "0.0.0"
            4→authors = ["David Tolnay <dtolnay@gmail.com>"]
            5→edition = "2021"
            6→publish = false
            11→[dependencies]
            12→anyhow = { path = "../..", default-features = false }
            14→[features]
            15→default = ["std"]
            16→std = ["anyhow/std"]
            17→backtrace = ["anyhow/backtrace"]
        test.rs
    drop/
        mod.rs
            3→use std::error::Error as StdError;
            4→use std::fmt::{self, Display};
            5→use std::sync::atomic::{AtomicBool, Ordering};
            6→use std::sync::Arc;
            9→pub struct Flag {
            10→    atomic: Arc<AtomicBool>,
            11→}
            13→impl Flag {
            14→    pub fn new() -> Self {
            …
            20→    pub fn get(&self) -> bool {
            …
            26→pub struct DetectDrop {
            27→    has_dropped: Flag,
            28→}
            30→impl DetectDrop {
            31→    pub fn new(has_dropped: &Flag) -> Self {
            …
            40→impl StdError for DetectDrop {}
            42→impl Display for DetectDrop {
            43→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
            …
            48→impl Drop for DetectDrop {
            49→    fn drop(&mut self) {
            …
    test_autotrait.rs
    test_backtrace.rs
    test_boxed.rs
    test_chain.rs
    test_context.rs
    test_convert.rs
    test_downcast.rs
    test_ensure.rs
    test_ffi.rs
        7→pub extern "C" fn anyhow1(err: anyhow::Error) {
        …
        12→pub extern "C" fn anyhow2(err: &mut Option<anyhow::Error>) {
        …
        17→pub extern "C" fn anyhow3() -> Option<anyhow::Error> {
        …
    test_fmt.rs
    test_macros.rs
    test_repr.rs
    test_source.rs
    ui/
        chained-comparison.rs
        chained-comparison.stderr
        empty-ensure.rs
        empty-ensure.stderr
        ensure-nonbool.rs
        ensure-nonbool.stderr
        must-use.rs
        must-use.stderr
        no-impl.rs
        no-impl.stderr
        temporary-value.rs
        temporary-value.stderr
        wrong-interpolation.rs
        wrong-interpolation.stderr
